Updated index.html with new content.

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div class="mx-auto max-w-4xl space-y-16">
       <header class="space-y-8 bg-red-800 pb-8">
         <div class="flex items-center justify-between p-4 text-stone-100">
-          <h1 class="text-4xl font-bold tracking-wider text-shadow-lg md:text-3xl lg:text-4xl">OPS Technologies</h1>
+          <h1 class="text-4xl font-bold tracking-wider uppercase text-shadow-lg md:text-3xl lg:text-4xl">OPS Technologies</h1>
           <nav class="hidden md:block">
             <ul class="flex space-x-4">
               <li><a href="#services" class="">Services</a></li>
@@ -22,13 +22,13 @@
               <li><a href="#quick-inquiry">Contact us</a></li>
             </ul>
           </nav>
-          <a href="#quick-inquiry" class="rounded-lg bg-gray-100 px-4 py-2 font-medium text-rose-700 shadow-sm transition hover:scale-105 hover:bg-rose-50 hover:text-rose-800 active:translate-y-0.5">Quick Inquiry</a>
+          <a href="#quick-inquiry" class="rounded-lg bg-gray-100 px-4 py-2 text-center font-medium text-rose-700 shadow-sm transition hover:scale-105 hover:bg-rose-50 hover:text-rose-800 active:translate-y-0.5">Quick Inquiry</a>
         </div>
 
         <div class="flex flex-col items-center justify-center space-y-4 px-8">
           <div class="grid h-44 w-44 place-items-center rounded-full bg-stone-200 text-6xl font-semibold shadow-2xl">OPS</div>
-          <h1 class="mb-1 text-4xl tracking-widest text-white">Om Prakash Singh</h1>
-          <p class="text-center tracking-widest text-white">Founder and Technical Specialist</p>
+          <h1 class="mb-2 text-center text-4xl tracking-widest text-white">Om Prakash Singh</h1>
+          <p class="mb-8 text-center text-lg tracking-widest text-white">Founder and Technical Specialist</p>
           <p class="mb-8 text-center tracking-wider text-white">Professional support focused on erection, commissioning, and maintenance of Roto Packers. Delivering reliable, efficient, and safety-oriented services.</p>
           <div class="space-y-4 rounded-lg border border-rose-700 bg-rose-700 p-4 text-white shadow-md">
             <a href="mailto:technologies.ops@gmail.com" class="flex items-center space-x-2 p-2 transition hover:scale-105 hover:cursor-pointer hover:shadow-sm">
@@ -124,7 +124,10 @@
       </main>
 
       <footer class="bg-stone-800 py-8 text-center text-neutral-100">
-        <p>&COPY; 2025 OPS Technologies</p>
+        <div class="flex justify-around">
+          <p>&COPY; 2025 OPS Technologies</p>
+          <p>GSTIN: 09AXKPS7915DZ2</p>
+        </div>
       </footer>
     </div>
   </body>
