--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <!doctype html>
-<html>
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>OPS Technologies | Home</title>
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
     <style type="text/tailwindcss">
       @theme {
@@ -17,9 +18,9 @@
           <h1 class="text-4xl font-bold tracking-wider uppercase text-shadow-lg md:text-3xl lg:text-4xl">OPS Technologies</h1>
           <nav class="hidden md:block">
             <ul class="flex space-x-4">
-              <li><a href="#services" class="">Services</a></li>
               <li><a href="#about-us">About us</a></li>
-              <li><a href="#quick-inquiry">Contact us</a></li>
+              <li><a href="#services" class="">Services</a></li>
+              <li><a href="#contact-us">Contact us</a></li>
             </ul>
           </nav>
           <a href="#quick-inquiry" class="rounded-lg bg-gray-100 px-4 py-2 text-center font-medium text-rose-700 shadow-sm transition hover:scale-105 hover:bg-rose-50 hover:text-rose-800 active:translate-y-0.5">Quick Inquiry</a>
@@ -109,16 +110,59 @@
           </div>
         </section>
 
-        <section id="quick-inquiry" class="rounded-lg bg-red-50 py-10 shadow-sm">
-          <div class="mx-auto flex max-w-lg flex-col gap-6 px-4">
-            <h2 class="mb-8 text-4xl font-bold">Quick Inquiry</h2>
-            <input type="text" placeholder="Name" class="rounded-md border border-red-300 bg-white px-4 py-2 text-gray-800 focus:ring-2 focus:ring-red-600 focus:outline-none" />
+        <section id="contact-us" class="space-y-8">
+          <h2 class="text-4xl font-bold">Contact us</h2>
 
-            <input type="email" placeholder="Email" class="rounded-md border border-red-300 bg-white px-4 py-2 text-gray-800 focus:ring-2 focus:ring-red-600 focus:outline-none" />
+          <div class="grid grid-cols-1 gap-8 sm:grid-cols-3">
+            <a href="https://maps.app.goo.gl/DcygJAHKjkZPZmK68" target="_blank" class="flex items-center justify-start gap-8 rounded-2xl bg-linear-to-r from-stone-200 to-stone-200 p-10 shadow-md/20 sm:flex-col sm:gap-1 sm:p-4 sm:text-center">
+              <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-12 shrink-0">
+                <path stroke-linecap="round" stroke-linejoin="round" d="M15 10.5a3 3 0 1 1-6 0 3 3 0 0 1 6 0Z" />
+                <path stroke-linecap="round" stroke-linejoin="round" d="M19.5 10.5c0 7.142-7.5 11.25-7.5 11.25S4.5 17.642 4.5 10.5a7.5 7.5 0 1 1 15 0Z" />
+              </svg>
+              <div class="flex flex-col space-y-2 sm:space-y-4">
+                <p class="text-3xl font-semibold">Location</p>
+                <p class="text-sm font-medium">
+                  Greater Noida, UP <br />
+                  India
+                </p>
+              </div>
+            </a>
+            <a href="tel:+919650124600" class="flex items-center justify-start gap-8 rounded-2xl bg-linear-to-r from-stone-200 to-neutral-200 p-10 shadow-md/20 sm:flex-col sm:gap-1 sm:p-4 sm:text-center">
+              <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-12 shrink-0">
+                <path stroke-linecap="round" stroke-linejoin="round" d="M10.5 1.5H8.25A2.25 2.25 0 0 0 6 3.75v16.5a2.25 2.25 0 0 0 2.25 2.25h7.5A2.25 2.25 0 0 0 18 20.25V3.75a2.25 2.25 0 0 0-2.25-2.25H13.5m-3 0V3h3V1.5m-3 0h3m-3 18.75h3" />
+              </svg>
+              <div class="flex flex-col space-y-2 sm:space-y-4">
+                <p class="text-3xl font-semibold">Phone</p>
+                <p class="text-sm font-medium">+91 9650124 600</p>
+              </div>
+            </a>
+            <a href="mailto:technologies.ops@gmail.com" class="flex items-center justify-start gap-8 rounded-2xl bg-linear-to-r from-neutral-200 to-zinc-200 p-10 shadow-md/20 sm:flex-col sm:gap-1 sm:p-4 sm:text-center">
+              <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-12 shrink-0">
+                <path stroke-linecap="round" stroke-linejoin="round" d="M21.75 9v.906a2.25 2.25 0 0 1-1.183 1.981l-6.478 3.488M2.25 9v.906a2.25 2.25 0 0 0 1.183 1.981l6.478 3.488m8.839 2.51-4.66-2.51m0 0-1.023-.55a2.25 2.25 0 0 0-2.134 0l-1.022.55m0 0-4.661 2.51m16.5 1.615a2.25 2.25 0 0 1-2.25 2.25h-15a2.25 2.25 0 0 1-2.25-2.25V8.844a2.25 2.25 0 0 1 1.183-1.981l7.5-4.039a2.25 2.25 0 0 1 2.134 0l7.5 4.039a2.25 2.25 0 0 1 1.183 1.98V19.5Z" />
+              </svg>
+              <div class="flex flex-col space-y-2 sm:space-y-4">
+                <p class="text-3xl font-semibold">Email</p>
+                <p class="text-sm font-medium sm:wrap-anywhere">TECHNOLOGIES.OPS@GMAIL.COM</p>
+              </div>
+            </a>
+          </div>
+        </section>
 
-            <input type="tel" placeholder="Phone number" class="rounded-md border border-red-300 bg-white px-4 py-2 text-gray-800 focus:ring-2 focus:ring-red-600 focus:outline-none" />
+        <section id="quick-inquiry" class="space-y-8">
+          <h2 class="text-4xl font-bold">Quick Inquiry</h2>
 
-            <button type="submit" class="mt-8 rounded-md bg-red-600 px-4 py-2 font-medium text-white transition hover:scale-105 hover:cursor-pointer hover:bg-red-700 active:scale-100">Submit</button>
+          <div class="rounded-lg bg-red-50 px-4 py-8 shadow-sm">
+            <form class="mx-auto flex max-w-lg flex-col space-y-4">
+              <input type="text" placeholder="Name" class="rounded-md border border-red-300 bg-white px-4 py-2 text-gray-800 focus:ring-2 focus:ring-red-600 focus:outline-none" />
+
+              <input type="email" placeholder="Email" class="rounded-md border border-red-300 bg-white px-4 py-2 text-gray-800 focus:ring-2 focus:ring-red-600 focus:outline-none" />
+
+              <input type="tel" placeholder="Phone number" class="rounded-md border border-red-300 bg-white px-4 py-2 text-gray-800 focus:ring-2 focus:ring-red-600 focus:outline-none" />
+
+              <textarea placeholder="Inquiry" class="rounded-md border border-red-300 bg-white px-4 py-2 text-gray-800 focus:ring-2 focus:ring-red-600 focus:outline-none"></textarea>
+
+              <button type="submit" class="rounded-md bg-red-600 px-4 py-2 font-medium text-white transition hover:scale-105 hover:cursor-pointer hover:bg-red-700 active:scale-100">Submit</button>
+            </form>
           </div>
         </section>
       </main>
